- fixed bottom bar on safari.

--- a/src/app/gxe-gallery/components/toolbars/toolbars.component.scss
+++ b/src/app/gxe-gallery/components/toolbars/toolbars.component.scss
@@ -27,7 +27,7 @@ span {
 
 
 .bottom-bar {
-  bottom: 0;
+  bottom: -80px;
   background-color: $black-dark;
 
   mat-toolbar-row {
